--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
   <section class="client-area">
     <div class="client-area-container">
-      <img src="./images/Group 27.png" alt="">
+      <img src="./images/mulher-celular.png" alt="">
       <div class="client-area-text">
         <h2>Área do cliente</h2>
         <p>Imprevistos acontecem e podem gerar a necessidade de uma nova via do seu boleto.</p>
@@ -402,9 +402,213 @@
 
   <section class="netflix">
     <div class="netflix-container">
-      <h2>Assista seus filmes e séries
+      <h2>Assista seus filmes e séries <br>
         sem travamentos.</h2>
-      <img src="./images/friends-watching-netflix-together-living-room 1.png" alt="">
+      <img src="./images/friends-netflix.png" alt="">
+    </div>
+  </section>
+
+  <section class="empresa-bloco">
+    <div class="empresa-container">
+      <div class="empresa-content-bloco">
+        <img src="./images/homem-notebook.png" alt="">
+        <div class="empresa-bloco-text">
+          <h2 class="titulo-40px">Sua empresa sempre <br>
+            conectada</h2>
+          <p class="p-20px">Conexão sempre estável e operando, para <br> que sua produtividade seja maximizada.</p>
+          <button class="button-orange">Quero ser PLIM!</button>
+        </div>
+      </div>
+      <div class="empresa-content-bloco bloco2">
+
+        <div class="empresa-bloco-text">
+          <h2 class="titulo-40px titulo-2">Telefone fixo com ligações
+            ilimitadas para todo Brasil. </h2>
+          <button class="button-orange">Saiba mais</button>
+        </div>
+        <img src="./images/homem-telefone.png" alt="">
+      </div>
+    </div>
+  </section>
+
+
+  <section class="blog">
+    <div class="blog-container">
+      <div class="blog-header">
+        <h2 class="titulo-40px">Blog</h2>
+        <div class="blog-pagination">
+          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M1.875 15C1.875 18.481 3.25781 21.8194 5.71922 24.2808C8.18064 26.7422 11.519 28.125 15 28.125C18.481 28.125 21.8194 26.7422 24.2808 24.2808C26.7422 21.8194 28.125 18.481 28.125 15C28.125 11.519 26.7422 8.18064 24.2808 5.71922C21.8194 3.25781 18.481 1.875 15 1.875C11.519 1.875 8.18064 3.25781 5.71922 5.71922C3.25781 8.18064 1.875 11.519 1.875 15ZM30 15C30 18.9782 28.4196 22.7936 25.6066 25.6066C22.7936 28.4196 18.9782 30 15 30C11.0218 30 7.20644 28.4196 4.3934 25.6066C1.58035 22.7936 0 18.9782 0 15C0 11.0218 1.58035 7.20644 4.3934 4.3934C7.20644 1.58035 11.0218 0 15 0C18.9782 0 22.7936 1.58035 25.6066 4.3934C28.4196 7.20644 30 11.0218 30 15ZM21.5625 14.0625C21.8111 14.0625 22.0496 14.1613 22.2254 14.3371C22.4012 14.5129 22.5 14.7514 22.5 15C22.5 15.2486 22.4012 15.4871 22.2254 15.6629C22.0496 15.8387 21.8111 15.9375 21.5625 15.9375H10.7006L14.7262 19.9613C14.8134 20.0484 14.8826 20.1519 14.9297 20.2658C14.9769 20.3797 15.0012 20.5017 15.0012 20.625C15.0012 20.7483 14.9769 20.8703 14.9297 20.9842C14.8826 21.0981 14.8134 21.2016 14.7262 21.2887C14.6391 21.3759 14.5356 21.4451 14.4217 21.4922C14.3078 21.5394 14.1858 21.5637 14.0625 21.5637C13.9392 21.5637 13.8172 21.5394 13.7033 21.4922C13.5894 21.4451 13.4859 21.3759 13.3988 21.2887L7.77375 15.6637C7.68644 15.5767 7.61718 15.4732 7.56991 15.3593C7.52265 15.2454 7.49832 15.1233 7.49832 15C7.49832 14.8767 7.52265 14.7546 7.56991 14.6407C7.61718 14.5268 7.68644 14.4233 7.77375 14.3363L13.3988 8.71125C13.5748 8.53521 13.8135 8.43632 14.0625 8.43632C14.3115 8.43632 14.5502 8.53521 14.7262 8.71125C14.9023 8.88729 15.0012 9.12605 15.0012 9.375C15.0012 9.62395 14.9023 9.86271 14.7262 10.0387L10.7006 14.0625H21.5625Z"
+              fill="#0099DC" />
+          </svg>
+          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M28.125 15C28.125 18.481 26.7422 21.8194 24.2808 24.2808C21.8194 26.7422 18.481 28.125 15 28.125C11.519 28.125 8.18064 26.7422 5.71922 24.2808C3.25781 21.8194 1.875 18.481 1.875 15C1.875 11.519 3.25781 8.18064 5.71922 5.71922C8.18064 3.25781 11.519 1.875 15 1.875C18.481 1.875 21.8194 3.25781 24.2808 5.71922C26.7422 8.18064 28.125 11.519 28.125 15ZM0 15C0 18.9782 1.58035 22.7936 4.3934 25.6066C7.20644 28.4196 11.0218 30 15 30C18.9782 30 22.7936 28.4196 25.6066 25.6066C28.4196 22.7936 30 18.9782 30 15C30 11.0218 28.4196 7.20644 25.6066 4.3934C22.7936 1.58035 18.9782 0 15 0C11.0218 0 7.20644 1.58035 4.3934 4.3934C1.58035 7.20644 0 11.0218 0 15ZM8.4375 14.0625C8.18886 14.0625 7.9504 14.1613 7.77459 14.3371C7.59877 14.5129 7.5 14.7514 7.5 15C7.5 15.2486 7.59877 15.4871 7.77459 15.6629C7.9504 15.8387 8.18886 15.9375 8.4375 15.9375H19.2994L15.2738 19.9613C15.1866 20.0484 15.1174 20.1519 15.0703 20.2658C15.0231 20.3797 14.9988 20.5017 14.9988 20.625C14.9988 20.7483 15.0231 20.8703 15.0703 20.9842C15.1174 21.0981 15.1866 21.2016 15.2738 21.2887C15.3609 21.3759 15.4644 21.4451 15.5783 21.4922C15.6922 21.5394 15.8142 21.5637 15.9375 21.5637C16.0608 21.5637 16.1828 21.5394 16.2967 21.4922C16.4106 21.4451 16.5141 21.3759 16.6012 21.2887L22.2263 15.6637C22.3136 15.5767 22.3828 15.4732 22.4301 15.3593C22.4773 15.2454 22.5017 15.1233 22.5017 15C22.5017 14.8767 22.4773 14.7546 22.4301 14.6407C22.3828 14.5268 22.3136 14.4233 22.2263 14.3363L16.6012 8.71125C16.4252 8.53521 16.1865 8.43632 15.9375 8.43632C15.6885 8.43632 15.4498 8.53521 15.2738 8.71125C15.0977 8.88729 14.9988 9.12605 14.9988 9.375C14.9988 9.62395 15.0977 9.86271 15.2738 10.0387L19.2994 14.0625H8.4375Z"
+              fill="#0099DC" />
+          </svg>
+
+        </div>
+      </div>
+      <div class="blog-content">
+        <div class="blog-post">
+          <img src="./images/img-blog1.png" alt="">
+          <div class="blog-post-text">
+            <h5 class="p-20px">O futuro do trabalho é home office.</h5>
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mauris nunc, vehicula et odio
+              ullamcorper, consectetur pharetra velit. Nunc lorem eros, laoreet ut purus et, placerat egestas eros.
+            </blockquote>
+
+            <a href="">continuar lendo...</a>
+          </div>
+
+        </div>
+        <div class="blog-post">
+          <img src="./images/img-blog1.png" alt="">
+          <div class="blog-post-text">
+            <h5 class="p-20px">O futuro do trabalho é home office.</h5>
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mauris nunc, vehicula et odio
+              ullamcorper, consectetur pharetra velit. Nunc lorem eros, laoreet ut purus et, placerat egestas eros.
+            </blockquote>
+
+            <a href="">continuar lendo...</a>
+          </div>
+
+        </div>
+        <div class="blog-post">
+          <img src="./images/img-blog1.png" alt="">
+          <div class="blog-post-text">
+            <h5 class="p-20px">O futuro do trabalho é home office.</h5>
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mauris nunc, vehicula et odio
+              ullamcorper, consectetur pharetra velit. Nunc lorem eros, laoreet ut purus et, placerat egestas eros.
+            </blockquote>
+
+            <a href="">continuar lendo...</a>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="fale-conosco">
+    <div class="fale-conosco-container">
+      <div class="fale-conosco-text">
+        <h2 class="titulo-40px">Fale conosco</h2>
+        <p class="p-20px">Quer enviar uma mensagem, tirar alguma <br>
+          dúvida ou bater um papo? </p>
+        <div class="fale-conosco-blocks">
+          <div class="block">
+            <a href="">
+              <svg width="181" height="181" viewBox="0 0 181 181" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d)">
+                  <path
+                    d="M17 27C17 21.4772 21.4772 17 27 17H138C143.523 17 148 21.4772 148 27V138C148 143.523 143.523 148 138 148H27C21.4772 148 17 143.523 17 138V27Z"
+                    fill="white" />
+                </g>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M98.445 66.5404C96.3687 64.4607 93.8986 62.8118 91.1777 61.6891C88.4568 60.5665 85.5391 59.9924 82.5937 60.0001C70.2469 60.0001 60.1875 70.0046 60.1875 82.2957C60.1781 86.2093 61.2093 90.0557 63.1762 93.4444L60 105L71.88 101.894C75.165 103.676 78.8455 104.61 82.5862 104.614H82.5956C94.9444 104.614 104.993 94.611 105 82.3106C105 76.3545 102.671 70.755 98.445 66.5385V66.5404ZM82.5937 100.845H82.5862C79.2517 100.845 75.9783 99.9536 73.1081 98.2637L72.4275 97.8624L65.3738 99.701L67.2562 92.8602L66.8175 92.1602C64.9511 89.2058 63.963 85.7857 63.9675 82.2957C63.9675 72.0821 72.3244 63.7704 82.6013 63.7704C85.047 63.7644 87.4697 64.2413 89.7291 65.1736C91.9884 66.106 94.0396 67.4752 95.7637 69.202C97.4964 70.9206 98.8698 72.9638 99.8047 75.2138C100.74 77.4637 101.217 79.8758 101.211 82.3106C101.211 92.5335 92.8538 100.845 82.5919 100.845H82.5937Z"
+                  fill="#0099DC" />
+                <path
+                  d="M88.7694 84.1534C89.2812 84.3363 92.0356 85.6839 92.5925 85.9602C93.1569 86.2439 93.53 86.3839 93.6688 86.6172C93.8094 86.8505 93.8094 87.9667 93.3462 89.2639C92.8775 90.5686 90.6444 91.7576 89.5681 91.9162C88.6006 92.0562 87.3781 92.1141 86.0375 91.6922C85.2238 91.4365 84.185 91.0931 82.85 90.5182C77.2344 88.1029 73.565 82.4754 73.2875 82.1114L73.2843 82.1071C72.9913 81.7182 71 79.0755 71 76.3438C71 73.6038 72.4438 72.2543 72.9556 71.6999C73.4694 71.1381 74.0769 71 74.4519 71C74.825 71 75.1981 71 75.5206 71.0149C75.8638 71.0355 76.325 70.8824 76.7806 71.9687C77.2494 73.0849 78.3687 75.8343 78.5075 76.1105C78.6481 76.3868 78.7419 76.7153 78.5581 77.0867C78.3706 77.46 78.2731 77.6933 77.9956 78.0125C77.7162 78.341 77.4087 78.7423 77.1537 78.9887C76.8744 79.2687 76.5819 79.5673 76.9119 80.1273C77.2344 80.6816 78.3613 82.5108 80.0244 83.9854C82.1638 85.8874 83.9656 86.479 84.5281 86.7553C85.085 87.0334 85.415 86.9811 85.7375 86.6172C86.0656 86.2457 87.1344 84.9896 87.5094 84.4296C87.8825 83.8753 88.2575 83.963 88.7694 84.1534Z"
+                  fill="#E88100" />
+                <defs>
+                  <filter id="filter0_d" x="0" y="0" width="181" height="181" filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                      result="hardAlpha" />
+                    <feOffset dx="8" dy="8" />
+                    <feGaussianBlur stdDeviation="12.5" />
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                  </filter>
+                </defs>
+              </svg>
+
+            </a>
+            <a href="">
+              <svg width="181" height="181" viewBox="0 0 181 181" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d)">
+                  <path
+                    d="M17 27C17 21.4772 21.4772 17 27 17H138C143.523 17 148 21.4772 148 27V138C148 143.523 143.523 148 138 148H27C21.4772 148 17 143.523 17 138V27Z"
+                    fill="white" />
+                </g>
+                <path d="M60 68.75L82.5 82.5L105 68.75" stroke="#E88100" stroke-width="4" stroke-linecap="round" />
+                <path
+                  d="M102.5 65H62.5C61.1193 65 60 66.1193 60 67.5V97.5C60 98.8807 61.1193 100 62.5 100H102.5C103.881 100 105 98.8807 105 97.5V67.5C105 66.1193 103.881 65 102.5 65Z"
+                  stroke="#0099DC" stroke-width="4" stroke-linecap="round" />
+                <defs>
+                  <filter id="filter0_d" x="0" y="0" width="181" height="181" filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                      result="hardAlpha" />
+                    <feOffset dx="8" dy="8" />
+                    <feGaussianBlur stdDeviation="12.5" />
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                  </filter>
+                </defs>
+              </svg>
+
+            </a>
+            <a href="">
+              <svg width="181" height="181" viewBox="0 0 181 181" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d)">
+                  <path
+                    d="M17 27C17 21.4772 21.4772 17 27 17H138C143.523 17 148 21.4772 148 27V138C148 143.523 143.523 148 138 148H27C21.4772 148 17 143.523 17 138V27Z"
+                    fill="white" />
+                </g>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M67.5319 92.6394C67.8238 92.9324 68.0475 93.2863 68.187 93.6756C68.3265 94.065 68.3785 94.4804 68.3391 94.8922C68.1414 96.7979 67.7667 98.681 67.2197 100.517C71.1431 99.6087 73.5394 98.5569 74.6278 98.0056C75.2452 97.6929 75.9561 97.6188 76.6247 97.7975C78.5412 98.3084 80.5165 98.5656 82.5 98.5625C93.7388 98.5625 102.188 90.6678 102.188 81.6875C102.188 72.71 93.7388 64.8125 82.5 64.8125C71.2612 64.8125 62.8125 72.71 62.8125 81.6875C62.8125 85.8162 64.5478 89.6469 67.5319 92.6394ZM66.1453 103.622C65.4789 103.754 64.8104 103.875 64.14 103.985C63.5775 104.075 63.15 103.49 63.3722 102.967C63.6219 102.378 63.8508 101.78 64.0584 101.175L64.0669 101.147C64.7644 99.1222 65.3325 96.7934 65.5406 94.625C62.0897 91.1656 60 86.6375 60 81.6875C60 70.8144 70.0744 62 82.5 62C94.9256 62 105 70.8144 105 81.6875C105 92.5606 94.9256 101.375 82.5 101.375C80.2715 101.378 78.0523 101.089 75.8991 100.514C74.4366 101.254 71.2894 102.601 66.1453 103.622Z"
+                  fill="#0099DC" />
+                <path
+                  d="M74.0625 81.6875C74.0625 82.4334 73.7662 83.1488 73.2387 83.6762C72.7113 84.2037 71.9959 84.5 71.25 84.5C70.5041 84.5 69.7887 84.2037 69.2613 83.6762C68.7338 83.1488 68.4375 82.4334 68.4375 81.6875C68.4375 80.9416 68.7338 80.2262 69.2613 79.6988C69.7887 79.1713 70.5041 78.875 71.25 78.875C71.9959 78.875 72.7113 79.1713 73.2387 79.6988C73.7662 80.2262 74.0625 80.9416 74.0625 81.6875ZM85.3125 81.6875C85.3125 82.4334 85.0162 83.1488 84.4887 83.6762C83.9613 84.2037 83.2459 84.5 82.5 84.5C81.7541 84.5 81.0387 84.2037 80.5113 83.6762C79.9838 83.1488 79.6875 82.4334 79.6875 81.6875C79.6875 80.9416 79.9838 80.2262 80.5113 79.6988C81.0387 79.1713 81.7541 78.875 82.5 78.875C83.2459 78.875 83.9613 79.1713 84.4887 79.6988C85.0162 80.2262 85.3125 80.9416 85.3125 81.6875ZM96.5625 81.6875C96.5625 82.4334 96.2662 83.1488 95.7387 83.6762C95.2113 84.2037 94.4959 84.5 93.75 84.5C93.0041 84.5 92.2887 84.2037 91.7613 83.6762C91.2338 83.1488 90.9375 82.4334 90.9375 81.6875C90.9375 80.9416 91.2338 80.2262 91.7613 79.6988C92.2887 79.1713 93.0041 78.875 93.75 78.875C94.4959 78.875 95.2113 79.1713 95.7387 79.6988C96.2662 80.2262 96.5625 80.9416 96.5625 81.6875Z"
+                  fill="#E88100" />
+                <defs>
+                  <filter id="filter0_d" x="0" y="0" width="181" height="181" filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                      result="hardAlpha" />
+                    <feOffset dx="8" dy="8" />
+                    <feGaussianBlur stdDeviation="12.5" />
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                  </filter>
+                </defs>
+              </svg>
+
+            </a>
+          </div>
+        </div>
+        <div class="fale-conosco-redes">
+          <p>Também estamos <br>
+            nas redes sociais </p>
+          <a href="">
+            <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M21.5018 3.58691C11.6082 3.58691 3.58691 11.6082 3.58691 21.5018C3.58691 30.4422 10.1372 37.8525 18.7032 39.2017V26.6815H14.1524V21.5018H18.7032V17.5547C18.7032 13.0612 21.3782 10.5834 25.4685 10.5834C27.4286 10.5834 29.4819 10.9327 29.4819 10.9327V15.3385H27.2172C24.9955 15.3385 24.3004 16.7216 24.3004 18.1388V21.4982H29.2651L28.4714 26.6779H24.3004V39.1981C32.8663 37.8561 39.4167 30.444 39.4167 21.5018C39.4167 11.6082 31.3954 3.58691 21.5018 3.58691Z"
+                fill="#336A99" />
+            </svg>
+
+          </a>
+          <a href="">
+            <svg width="43" height="42" viewBox="0 0 43 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M27.305 21.0002C27.305 17.8502 24.725 15.3302 21.5 15.3302C18.275 15.3302 15.695 17.8502 15.695 21.0002C15.695 24.1502 18.275 26.6702 21.5 26.6702C24.725 26.6702 27.305 24.1502 27.305 21.0002ZM30.315 21.0002C30.315 25.8302 26.445 29.6102 21.5 29.6102C16.555 29.6102 12.685 25.8302 12.685 21.0002C12.685 16.1702 16.555 12.3902 21.5 12.3902C26.445 12.3902 30.315 16.1702 30.315 21.0002ZM32.68 11.9702C32.68 13.2302 31.82 14.0702 30.53 14.0702C29.24 14.0702 28.38 13.2302 28.38 11.9702C28.38 10.7102 29.24 9.87019 30.53 9.87019C31.82 9.87019 32.68 10.9202 32.68 11.9702ZM21.5 7.1402C18.92 7.1402 13.545 6.9302 11.395 7.7702C9.89 8.4002 8.6 9.6602 8.17 11.1302C7.31 13.2302 7.525 18.4802 7.525 21.0002C7.525 23.5202 7.31 28.7702 8.17 30.8702C8.6 32.3402 9.89 33.6002 11.395 34.0202C13.545 34.8602 19.135 34.6502 21.5 34.6502C23.865 34.6502 29.455 34.8602 31.605 34.0202C33.11 33.3902 34.185 32.3402 34.83 30.8702C35.69 28.5602 35.475 23.3102 35.475 21.0002C35.475 18.6902 35.69 13.2302 34.83 11.1302C34.4 9.6602 33.11 8.4002 31.605 7.9802C29.455 6.9302 24.08 7.1402 21.5 7.1402ZM38.7 21.0002V27.9302C38.7 30.4502 37.84 32.9702 35.905 35.0702C33.97 36.9602 31.39 37.8002 28.595 37.8002H14.405C11.825 37.8002 9.245 36.9602 7.095 35.0702C5.375 33.1802 4.3 30.6602 4.3 27.9302V21.0002V14.0702C4.3 11.3402 5.375 8.82019 7.095 6.9302C9.245 5.2502 11.825 4.2002 14.405 4.2002H28.595C31.175 4.2002 33.755 5.0402 35.905 6.9302C37.625 8.82019 38.7 11.3402 38.7 14.0702V21.0002Z"
+                fill="#336A99" />
+            </svg>
+
+          </a>
+        </div>
+      </div>
+      <img src="./images/girl.png" alt="">
     </div>
   </section>
 </body>
