--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <li><a href="">Para Empresas</a></li>
               <li><a href="">Planos</a></li>
               <li><a href="">Blog</a></li>
-              <button class="button-off">Fale Consco</button>
+              <button class="button-off">Fale Conosco</button>
               <button class="button-orange">
                 <img src="./images/user.png" alt="" /> Area do cliente
               </button>
@@ -47,52 +47,56 @@
     </div>
 
     <div class="header-content">
-      <div class="header-content-text">
-        <h2>
-          Navegue e <b>assista suas séries</b> com <b>ultravelocidade</b> de
-          verdade.
-        </h2>
-        <div class="header-content-text-plans">
-          <div class="header-content-text-plans-left">
-            <div class="header-plan1">
-              <h1>300</h1>
-              <p>Mega <span>plim fibra</span></p>
+      <div class="header-content-top">
+        <div class="header-content-text">
+          <h2>
+            Navegue e <b>assista suas séries</b> com <b>ultravelocidade</b> de
+            verdade.
+          </h2>
+          <div class="header-content-text-plans">
+            <div class="header-content-text-plans-left">
+              <div class="header-plan1">
+                <h1>300</h1>
+                <p>Mega <span>plim fibra</span></p>
+              </div>
+              <div class="header-plan-more">
+                <h1>
+                  +
+                  <p>Telefone fixo <span>com ilimitadas</span></p>
+                  + <img src="./images/wifi.png" alt="" />
+                </h1>
+              </div>
             </div>
-            <div class="header-plan-more">
-              <h1>
-                +
-                <p>Telefone fixo <span>com ilimitadas</span></p>
-                + <img src="./images/wifi.png" alt="" />
-              </h1>
+            <div class="header-plan2">
+              <p>por apenas</p>
+              <h1><span>R$</span>99<span>,90</span></h1>
+              <p class="fine">por mês</p>
             </div>
           </div>
-          <div class="header-plan2">
-            <p>por apenas</p>
-            <h1><span>R$</span>99<span>,90</span></h1>
-            <p class="fine">por mês</p>
-          </div>
+          <button class="button-orange">Quero ser <b>PLIM!</b></button>
         </div>
-        <button class="button-orange">Quero ser <b>PLIM!</b></button>
+        <div class="header-content-img">
+          <img src="./images/mulher.png" alt="" />
+        </div>
       </div>
-      <div class="header-content-img">
-        <img src="./images/mulher.png" alt="" />
+      
+      <div class="form-ligacao">
+        <h3>
+          <svg width="40" height="42" viewBox="0 0 40 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M37.1797 32.3451L34.8652 40.1093C34.7475 40.5043 34.5077 40.8463 34.185 41.0796C33.8623 41.3129 33.4759 41.4237 33.0887 41.3939C14.8257 39.999 1.20308 23.1147 2.69028 3.64312L12.8554 0.953501C13.1987 1.17347 13.4579 1.5147 13.5884 1.91835L16.362 10.682M37.1797 32.3451C37.3 31.9335 37.2821 31.4914 37.1289 31.0951C36.9758 30.6988 36.697 30.3729 36.3407 30.1736M37.1797 32.3451L36.2199 32.0647L33.907 39.8235C33.8498 40.0153 33.7366 40.1698 33.5991 40.2692C33.4629 40.3677 33.3101 40.408 33.1655 40.3968L33.1649 40.3968C15.5098 39.0483 2.23773 22.6993 3.68738 3.71928L3.68739 3.71907C3.7028 3.51675 3.78204 3.33236 3.90208 3.19489C4.02122 3.05846 4.1695 2.97974 4.31622 2.95531C4.31627 2.9553 4.31632 2.95529 4.31637 2.95528L11.8684 1.70042C11.8688 1.70035 11.8692 1.70028 11.8697 1.70021C12.0217 1.67582 12.1781 1.70722 12.3159 1.79548C12.4551 1.88467 12.5735 2.03185 12.6361 2.22349L15.4085 10.9836L16.362 10.682M37.1797 32.3451L36.2214 32.0595L36.2205 32.0624C36.2791 31.8601 36.269 31.6442 36.1961 31.4555C36.1236 31.2678 35.9979 31.1283 35.8546 31.0475L35.8575 31.0492L36.3407 30.1736M36.3407 30.1736L28.6321 25.9198M36.3407 30.1736L35.8526 31.0464L28.1508 26.7964L28.6321 25.9198M28.6321 25.9198C28.3027 25.7389 27.926 25.6774 27.5586 25.7443C27.1913 25.8113 26.8532 26.0032 26.5953 26.2911L22.7069 30.6212C17.3686 27.4111 13.2644 22.3143 11.0985 16.2052L15.7076 12.77C16.0145 12.5427 16.2444 12.216 16.3624 11.8392M28.6321 25.9198L28.1489 26.7953L28.15 26.796C28.0208 26.7252 27.8775 26.7027 27.738 26.7281C27.5972 26.7538 27.4556 26.8295 27.3402 26.9583L27.3394 26.9592L23.4509 31.2894L22.8992 31.9038L22.1915 31.4782C16.646 28.1435 12.396 22.8574 10.156 16.5393L9.90949 15.8442L10.5009 15.4034L15.11 11.9682L15.1125 11.9663C15.2432 11.8695 15.3511 11.7223 15.4082 11.5402L16.3624 11.8392M16.3624 11.8392C16.4805 11.4625 16.4804 11.0563 16.362 10.682M16.3624 11.8392L15.4082 11.5402C15.4654 11.3578 15.4647 11.1613 15.4086 10.9837L16.362 10.682"
+              stroke="#186DA3" stroke-width="2" />
+          </svg>
+          Nós ligamos <br />pra você
+        </h3>
+        <form action="">
+          <input class="input-form-ligacao" type="text" placeholder="Seu Nome" />
+          <input class="input-form-ligacao" type="text" name="" id="" placeholder="Celular" />
+          <button type="submit">Me ligue!</button>
+        </form>
       </div>
     </div>
-    <div class="form-ligacao">
-      <h3>
-        <svg width="40" height="42" viewBox="0 0 40 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M37.1797 32.3451L34.8652 40.1093C34.7475 40.5043 34.5077 40.8463 34.185 41.0796C33.8623 41.3129 33.4759 41.4237 33.0887 41.3939C14.8257 39.999 1.20308 23.1147 2.69028 3.64312L12.8554 0.953501C13.1987 1.17347 13.4579 1.5147 13.5884 1.91835L16.362 10.682M37.1797 32.3451C37.3 31.9335 37.2821 31.4914 37.1289 31.0951C36.9758 30.6988 36.697 30.3729 36.3407 30.1736M37.1797 32.3451L36.2199 32.0647L33.907 39.8235C33.8498 40.0153 33.7366 40.1698 33.5991 40.2692C33.4629 40.3677 33.3101 40.408 33.1655 40.3968L33.1649 40.3968C15.5098 39.0483 2.23773 22.6993 3.68738 3.71928L3.68739 3.71907C3.7028 3.51675 3.78204 3.33236 3.90208 3.19489C4.02122 3.05846 4.1695 2.97974 4.31622 2.95531C4.31627 2.9553 4.31632 2.95529 4.31637 2.95528L11.8684 1.70042C11.8688 1.70035 11.8692 1.70028 11.8697 1.70021C12.0217 1.67582 12.1781 1.70722 12.3159 1.79548C12.4551 1.88467 12.5735 2.03185 12.6361 2.22349L15.4085 10.9836L16.362 10.682M37.1797 32.3451L36.2214 32.0595L36.2205 32.0624C36.2791 31.8601 36.269 31.6442 36.1961 31.4555C36.1236 31.2678 35.9979 31.1283 35.8546 31.0475L35.8575 31.0492L36.3407 30.1736M36.3407 30.1736L28.6321 25.9198M36.3407 30.1736L35.8526 31.0464L28.1508 26.7964L28.6321 25.9198M28.6321 25.9198C28.3027 25.7389 27.926 25.6774 27.5586 25.7443C27.1913 25.8113 26.8532 26.0032 26.5953 26.2911L22.7069 30.6212C17.3686 27.4111 13.2644 22.3143 11.0985 16.2052L15.7076 12.77C16.0145 12.5427 16.2444 12.216 16.3624 11.8392M28.6321 25.9198L28.1489 26.7953L28.15 26.796C28.0208 26.7252 27.8775 26.7027 27.738 26.7281C27.5972 26.7538 27.4556 26.8295 27.3402 26.9583L27.3394 26.9592L23.4509 31.2894L22.8992 31.9038L22.1915 31.4782C16.646 28.1435 12.396 22.8574 10.156 16.5393L9.90949 15.8442L10.5009 15.4034L15.11 11.9682L15.1125 11.9663C15.2432 11.8695 15.3511 11.7223 15.4082 11.5402L16.3624 11.8392M16.3624 11.8392C16.4805 11.4625 16.4804 11.0563 16.362 10.682M16.3624 11.8392L15.4082 11.5402C15.4654 11.3578 15.4647 11.1613 15.4086 10.9837L16.362 10.682"
-            stroke="#186DA3" stroke-width="2" />
-        </svg>
-        Nós ligamos <br />pra você
-      </h3>
-      <form action="">
-        <input class="input-form-ligacao" type="text" placeholder="Seu Nome" />
-        <input class="input-form-ligacao" type="text" name="" id="" placeholder="Celular" />
-        <button type="submit">Me ligue!</button>
-      </form>
-    </div>
+   
   </header>
 
   <section class="beneficios">
@@ -501,88 +505,15 @@
         <div class="fale-conosco-blocks">
           <div class="block">
             <a href="">
-              <svg width="181" height="181" viewBox="0 0 181 181" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_d)">
-                  <path
-                    d="M17 27C17 21.4772 21.4772 17 27 17H138C143.523 17 148 21.4772 148 27V138C148 143.523 143.523 148 138 148H27C21.4772 148 17 143.523 17 138V27Z"
-                    fill="white" />
-                </g>
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M98.445 66.5404C96.3687 64.4607 93.8986 62.8118 91.1777 61.6891C88.4568 60.5665 85.5391 59.9924 82.5937 60.0001C70.2469 60.0001 60.1875 70.0046 60.1875 82.2957C60.1781 86.2093 61.2093 90.0557 63.1762 93.4444L60 105L71.88 101.894C75.165 103.676 78.8455 104.61 82.5862 104.614H82.5956C94.9444 104.614 104.993 94.611 105 82.3106C105 76.3545 102.671 70.755 98.445 66.5385V66.5404ZM82.5937 100.845H82.5862C79.2517 100.845 75.9783 99.9536 73.1081 98.2637L72.4275 97.8624L65.3738 99.701L67.2562 92.8602L66.8175 92.1602C64.9511 89.2058 63.963 85.7857 63.9675 82.2957C63.9675 72.0821 72.3244 63.7704 82.6013 63.7704C85.047 63.7644 87.4697 64.2413 89.7291 65.1736C91.9884 66.106 94.0396 67.4752 95.7637 69.202C97.4964 70.9206 98.8698 72.9638 99.8047 75.2138C100.74 77.4637 101.217 79.8758 101.211 82.3106C101.211 92.5335 92.8538 100.845 82.5919 100.845H82.5937Z"
-                  fill="#0099DC" />
-                <path
-                  d="M88.7694 84.1534C89.2812 84.3363 92.0356 85.6839 92.5925 85.9602C93.1569 86.2439 93.53 86.3839 93.6688 86.6172C93.8094 86.8505 93.8094 87.9667 93.3462 89.2639C92.8775 90.5686 90.6444 91.7576 89.5681 91.9162C88.6006 92.0562 87.3781 92.1141 86.0375 91.6922C85.2238 91.4365 84.185 91.0931 82.85 90.5182C77.2344 88.1029 73.565 82.4754 73.2875 82.1114L73.2843 82.1071C72.9913 81.7182 71 79.0755 71 76.3438C71 73.6038 72.4438 72.2543 72.9556 71.6999C73.4694 71.1381 74.0769 71 74.4519 71C74.825 71 75.1981 71 75.5206 71.0149C75.8638 71.0355 76.325 70.8824 76.7806 71.9687C77.2494 73.0849 78.3687 75.8343 78.5075 76.1105C78.6481 76.3868 78.7419 76.7153 78.5581 77.0867C78.3706 77.46 78.2731 77.6933 77.9956 78.0125C77.7162 78.341 77.4087 78.7423 77.1537 78.9887C76.8744 79.2687 76.5819 79.5673 76.9119 80.1273C77.2344 80.6816 78.3613 82.5108 80.0244 83.9854C82.1638 85.8874 83.9656 86.479 84.5281 86.7553C85.085 87.0334 85.415 86.9811 85.7375 86.6172C86.0656 86.2457 87.1344 84.9896 87.5094 84.4296C87.8825 83.8753 88.2575 83.963 88.7694 84.1534Z"
-                  fill="#E88100" />
-                <defs>
-                  <filter id="filter0_d" x="0" y="0" width="181" height="181" filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha" />
-                    <feOffset dx="8" dy="8" />
-                    <feGaussianBlur stdDeviation="12.5" />
-                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
-                  </filter>
-                </defs>
-              </svg>
+              <img src="./images/REDES.png" alt="">
 
             </a>
             <a href="">
-              <svg width="181" height="181" viewBox="0 0 181 181" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_d)">
-                  <path
-                    d="M17 27C17 21.4772 21.4772 17 27 17H138C143.523 17 148 21.4772 148 27V138C148 143.523 143.523 148 138 148H27C21.4772 148 17 143.523 17 138V27Z"
-                    fill="white" />
-                </g>
-                <path d="M60 68.75L82.5 82.5L105 68.75" stroke="#E88100" stroke-width="4" stroke-linecap="round" />
-                <path
-                  d="M102.5 65H62.5C61.1193 65 60 66.1193 60 67.5V97.5C60 98.8807 61.1193 100 62.5 100H102.5C103.881 100 105 98.8807 105 97.5V67.5C105 66.1193 103.881 65 102.5 65Z"
-                  stroke="#0099DC" stroke-width="4" stroke-linecap="round" />
-                <defs>
-                  <filter id="filter0_d" x="0" y="0" width="181" height="181" filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha" />
-                    <feOffset dx="8" dy="8" />
-                    <feGaussianBlur stdDeviation="12.5" />
-                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
-                  </filter>
-                </defs>
-              </svg>
+             <img src="./images/REDES1.png" alt="">
 
             </a>
             <a href="">
-              <svg width="181" height="181" viewBox="0 0 181 181" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_d)">
-                  <path
-                    d="M17 27C17 21.4772 21.4772 17 27 17H138C143.523 17 148 21.4772 148 27V138C148 143.523 143.523 148 138 148H27C21.4772 148 17 143.523 17 138V27Z"
-                    fill="white" />
-                </g>
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M67.5319 92.6394C67.8238 92.9324 68.0475 93.2863 68.187 93.6756C68.3265 94.065 68.3785 94.4804 68.3391 94.8922C68.1414 96.7979 67.7667 98.681 67.2197 100.517C71.1431 99.6087 73.5394 98.5569 74.6278 98.0056C75.2452 97.6929 75.9561 97.6188 76.6247 97.7975C78.5412 98.3084 80.5165 98.5656 82.5 98.5625C93.7388 98.5625 102.188 90.6678 102.188 81.6875C102.188 72.71 93.7388 64.8125 82.5 64.8125C71.2612 64.8125 62.8125 72.71 62.8125 81.6875C62.8125 85.8162 64.5478 89.6469 67.5319 92.6394ZM66.1453 103.622C65.4789 103.754 64.8104 103.875 64.14 103.985C63.5775 104.075 63.15 103.49 63.3722 102.967C63.6219 102.378 63.8508 101.78 64.0584 101.175L64.0669 101.147C64.7644 99.1222 65.3325 96.7934 65.5406 94.625C62.0897 91.1656 60 86.6375 60 81.6875C60 70.8144 70.0744 62 82.5 62C94.9256 62 105 70.8144 105 81.6875C105 92.5606 94.9256 101.375 82.5 101.375C80.2715 101.378 78.0523 101.089 75.8991 100.514C74.4366 101.254 71.2894 102.601 66.1453 103.622Z"
-                  fill="#0099DC" />
-                <path
-                  d="M74.0625 81.6875C74.0625 82.4334 73.7662 83.1488 73.2387 83.6762C72.7113 84.2037 71.9959 84.5 71.25 84.5C70.5041 84.5 69.7887 84.2037 69.2613 83.6762C68.7338 83.1488 68.4375 82.4334 68.4375 81.6875C68.4375 80.9416 68.7338 80.2262 69.2613 79.6988C69.7887 79.1713 70.5041 78.875 71.25 78.875C71.9959 78.875 72.7113 79.1713 73.2387 79.6988C73.7662 80.2262 74.0625 80.9416 74.0625 81.6875ZM85.3125 81.6875C85.3125 82.4334 85.0162 83.1488 84.4887 83.6762C83.9613 84.2037 83.2459 84.5 82.5 84.5C81.7541 84.5 81.0387 84.2037 80.5113 83.6762C79.9838 83.1488 79.6875 82.4334 79.6875 81.6875C79.6875 80.9416 79.9838 80.2262 80.5113 79.6988C81.0387 79.1713 81.7541 78.875 82.5 78.875C83.2459 78.875 83.9613 79.1713 84.4887 79.6988C85.0162 80.2262 85.3125 80.9416 85.3125 81.6875ZM96.5625 81.6875C96.5625 82.4334 96.2662 83.1488 95.7387 83.6762C95.2113 84.2037 94.4959 84.5 93.75 84.5C93.0041 84.5 92.2887 84.2037 91.7613 83.6762C91.2338 83.1488 90.9375 82.4334 90.9375 81.6875C90.9375 80.9416 91.2338 80.2262 91.7613 79.6988C92.2887 79.1713 93.0041 78.875 93.75 78.875C94.4959 78.875 95.2113 79.1713 95.7387 79.6988C96.2662 80.2262 96.5625 80.9416 96.5625 81.6875Z"
-                  fill="#E88100" />
-                <defs>
-                  <filter id="filter0_d" x="0" y="0" width="181" height="181" filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha" />
-                    <feOffset dx="8" dy="8" />
-                    <feGaussianBlur stdDeviation="12.5" />
-                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
-                  </filter>
-                </defs>
-              </svg>
+              <img src="./images/REDES2.png" alt="">
 
             </a>
           </div>
@@ -608,9 +539,55 @@
           </a>
         </div>
       </div>
-      <img src="./images/girl.png" alt="">
+      <img class="img-girl" src="./images/girl.png" alt="">
     </div>
   </section>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-top-content">
+        <div class="footer-infos">
+          <img src="./images/logo.png" alt="">
+          <div class="tel-container">
+            <p><img src="./images/tel.png" alt="" /> (38) 2100 - 1000</p>
+          </div>
+          <p>Rua Januária, 297 , Centro</p>
+          <p>contato@plimtelecom.com.br</p>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="">Conheça à Plim</a></li>
+            <li><a href="">Assine</a></li>
+            <li><a href="">Cobertura</a></li>
+            <li><a href="">Planos</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Fale Conosco </a></li>
+          </ul>
+        </div>
+        <div class="footer-buttons">
+
+
+          <span>Precisa de uma segunda via?</span>
+
+          <div class="client-area-botoes">
+            <button class="button-off">segunda via do boleto </button>
+            <button class="button-orange">
+              <svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M7.875 0.75C5.46263 0.75 3.5 2.71263 3.5 5.125C3.5 7.53737 5.46263 9.5 7.875 9.5C10.2874 9.5 12.25 7.53737 12.25 5.125C12.25 2.71263 10.2874 0.75 7.875 0.75ZM7.875 7.75C6.42775 7.75 5.25 6.57225 5.25 5.125C5.25 3.67775 6.42775 2.5 7.875 2.5C9.32225 2.5 10.5 3.67775 10.5 5.125C10.5 6.57225 9.32225 7.75 7.875 7.75ZM15.75 17.375V16.5C15.75 13.1234 13.0016 10.375 9.625 10.375H6.125C2.7475 10.375 0 13.1234 0 16.5V17.375H1.75V16.5C1.75 14.0876 3.71263 12.125 6.125 12.125H9.625C12.0374 12.125 14 14.0876 14 16.5V17.375H15.75Z"
+                  fill="white" />
+              </svg>
+
+              Área do Cliente </button>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom-content">
+        <p>© 2021 Plim. Todos os direitos reservados.</p>
+        <img src="./images/feito-por.png" alt="">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
